# Match-3-Adventure

./: .gitignore  AGENTS.md  spellDesign.xlsx  story-flow.visuals.json  ~$spellDesign.xlsx
.claude/: launch.json
Asset temp folder/: basics.psd  castingSpells.psd  fourInaRows.psd  multipliers.psd  opponents.psd  statusEffects.psd
Asset temp folder/Conversations/: 3_004_iredellSeige.txt  advanceIntoCastle.txt  ascension.txt  burnTheMages.txt  burnTheMerchants.txt  chasingOleron.txt  cordissInvasion.txt  cordissKnowledge.txt  denyingTheChallenge.txt  deviceReveal.txt  familyVisit.txt  freeingTheSlaves.txt  goodbyeToGabriella.txt  grierInvasion.txt  howToFightIredell  howToFightIredell.txt  inTheMine.txt  inquisition.txt  jayRoxanneSupportB.txt  jayRoxanneSupportC.txt  killingGabriella.txt  mainMyraSupportC.txt  meetingJay.txt  meetingRehnquist.txt  meetingTheVassals  merchantMeeting.txt  pacifyingIredell.txt  takeCannon.txt  (+15 more)
Assets/: DefaultVolumeProfile.asset  NewShaderVariants.shadervariants  UniversalRenderPipelineAsset.asset  UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
story-flow-pwa/: README.md  index.html  package-lock.json  package.json  vite.config.ts
story-flow-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
story-flow-tauri/src-tauri/: Cargo.toml  tauri.conf.json
story-flow-tauri/src-tauri/capabilities/: default.json
story-flow-tauri/src-tauri/icons/: icon.icns
story-flow-tauri/src-tauri/src/: lib.rs  main.rs
(+208 files in other folders)
